# python-gpr

./: .flake8  .gitignore  CMAKE_BUILD_SYSTEM.md  CMakeLists.txt  COMPATIBILITY_MATRIX.md  DEVELOPMENT_PLAN.md  ERROR_HANDLING_SUMMARY.md  GITHUB_ISSUES.md  GPR_PARAMETERS_GUIDE.md  MEMORY_LEAK_DETECTION.md  METADATA_ACCESS_GUIDE.md  PYBIND11_BUILDING.md  README.md  TESTING.md  WHEEL_BUILDING.md  demo_comprehensive_validation.py  demo_conversion_api.py  demo_error_handling.py  demo_high_level_api.py  demo_memory_profiling.py  demo_metadata_comprehensive.py  demo_numpy_integration.py  demo_parameters.py  pyproject.toml  test_sample.dng  validate_gpr_conversion_functions.py  validate_requirements.py
.github/workflows/: ci.yml  docs.yml  lint.yml  tests.yml  wheels.yml
examples/: basic_usage.py
scripts/: check_memory_leaks.py
src/python_gpr/: __init__.py  _core.cpp  _core.py  _core_minimal.cpp  bindings.cpp  conversion.py  core.py  exceptions.py  memory_profiler.py  metadata.py
tests/: TEST_DATA_MANAGEMENT.md  conftest.py  generate_test_data.py  test_conversion_bindings.py  test_core_basic.py  test_core_conversion_validation.py  test_data.py  test_data_management_integration.py  test_error_handling.py  test_error_handling_integration.py  test_example_data_usage.py  test_gpr_parameters.py  test_high_level_api.py  test_memory_leaks.py  test_memory_long_running.py  test_metadata.py  test_metadata_basic.py  test_metadata_comprehensive.py  test_metadata_pytest.py.disabled  test_numpy_integration.py  test_platform_compatibility.py  test_pybind11_binding.py  test_python_gpr.py  test_requirements_validation.py  test_test_data_management.py
tests/data/: corrupted_header.gpr  fullhd_1920x1080.gpr  hd_1280x720.gpr  manifest.json  medium_640x480.gpr  small_320x240.gpr  square_1024x1024.gpr  tall_720x2560.gpr  tiny_64x48.gpr  truncated_file.gpr  wide_2560x720.gpr
