[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-gpr"
dynamic = ["version"]
description = "Python bindings for the GPR (General Purpose Raw) library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0 OR MIT"}
authors = [
    {name = "Keenan Johnson", email = "keenan@example.com"}
]
keywords = [
    "gpr",
    "raw",
    "image",
    "compression",
    "dng",
    "gopro",
    "vc5",
    "wavelet"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]
imaging = [
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/keenanjohnson/python-gpr"
# FIXME: Add documentation URL when available
# Documentation = "https://python-gpr.readthedocs.io"
Repository = "https://github.com/keenanjohnson/python-gpr.git"
Issues = "https://github.com/keenanjohnson/python-gpr/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/python_gpr/_version.py"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | gpr
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "gpr",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "gpr/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]