[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "pybind11>=2.10.0",
    "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "python-gpr"
dynamic = ["version"]
description = "Python bindings for the GPR (General Purpose Raw) library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0 OR MIT"}
authors = [
    {name = "Keenan Johnson", email = "keenan.johnson@gmail.com"}
]
keywords = [
    "gpr",
    "raw",
    "image",
    "compression",
    "dng",
    "gopro",
    "vc5",
    "wavelet"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]
imaging = [
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/keenanjohnson/python-gpr"
# FIXME: Add documentation URL when available
# Documentation = "https://python-gpr.readthedocs.io"
Repository = "https://github.com/keenanjohnson/python-gpr.git"
Issues = "https://github.com/keenanjohnson/python-gpr/issues"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
install.components = ["Development"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

# Cross-platform compatibility settings
[tool.scikit-build.cmake]
# Common cmake arguments for all platforms
args = []
# Platform-specific arguments can be set via environment variables or
# conditional logic in CMakeLists.txt

[tool.setuptools_scm]
version_file = "src/python_gpr/_version.py"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | gpr
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "gpr",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "gpr/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.cibuildwheel]
# Build wheels for Python 3.9-3.12 on multiple platforms
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux*"  # Skip musl Linux for now due to potential compatibility issues

# Environment variables for all platforms
environment = { CMAKE_BUILD_TYPE = "Release" }

# Test command to ensure wheels work
test-command = "python -c 'import python_gpr; print(\"Wheel import test passed - version:\", getattr(python_gpr, \"__version__\", \"unknown\"))'"
test-requires = ["numpy"]

# Platform-specific settings
[tool.cibuildwheel.linux]
before-all = [
    "yum install -y cmake3 gcc-c++ || apt-get update && apt-get install -y cmake build-essential",
]
environment = { CMAKE_BUILD_TYPE = "Release", CMAKE_POSITION_INDEPENDENT_CODE = "ON" }

[tool.cibuildwheel.macos]
before-all = [
    "brew install cmake || true",  # Don't fail if already installed
]
environment = { CMAKE_BUILD_TYPE = "Release", CMAKE_OSX_DEPLOYMENT_TARGET = "10.9" }

[tool.cibuildwheel.windows]
before-all = [
    "choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' || echo 'cmake might already be installed'",
]